new version of shake

--- a/shake/index.html
+++ b/shake/index.html
@@ -16,23 +16,32 @@
 <body>
     <div class="container">
         <main class="main">
-            <button class="main-text__btn-shake">Shake</button>
+            <button class="main-text__btn-shake" onclick="shake()">Shake</button>
             <div class="main-text__for">for</div>
-            <div class="main-text__color">color</div>
+            <div class="main-text__color">color</div> <!-- --anim to start anim-->
         </main>
-    
+
         <footer class="footer">
             <div class="footer__navigation">
                 <div class="footer__line"></div>
                 <ul class="footer__list">
-                    <li class="footer__list-item--1"><a href="#" class="footer__btn">about</a></li>
-                    <li class="footer__list-item--2"><a href="#" class="footer__btn">@staxx6</a></li>
-                    <li class="footer__list-item--3"><a href="#" class="footer__btn">source</a></li>
-                    <li class="footer__list-item--4"><a href="#" class="footer__btn">© 2018</a></li>
+                    <li class="footer__list-item--1">
+                        <a href="#" class="footer__btn">about</a>
+                    </li>
+                    <li class="footer__list-item--2">
+                        <a href="#" class="footer__btn">@staxx6</a>
+                    </li>
+                    <li class="footer__list-item--3">
+                        <a href="#" class="footer__btn">source</a>
+                    </li>
+                    <li class="footer__list-item--4">
+                        <a href="#" class="footer__btn">© 2018</a>
+                    </li>
                 </ul>
             </div>
         </footer>
     </div>
+    <script src="./js/color.js"></script>
 </body>
 
 </html>
